--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -130,7 +130,7 @@ af:
     unlike button text:                         "Herroep Gunsteling"
   notes:
     loading community:                          "Gemeenskapsnotas besig om te laai..."
-    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
+    no community notes:                         "Geen gemeenskap notas is gevind wat verwys na enige geselekteerde verse. Om 'n Aantekening te skep, kies 'n vers in die Bybel leser en kliek dan op die Selekteer knoppie aan die bokant van die leser."
     public:                                     "Publiek"
     private:                                    "Privaat"
     draft:                                      "Konsep"
@@ -267,7 +267,7 @@ af:
       cookies title:                            "LifeChurch.tv cookies"
       cookies text:                             "Wanneer jy %{link} besoek, mag ons dalk een of meer cookies na jou rekenaar toe stuur sodat ons jou browser uniek kan identifiseer. ('n Cookie is eenvoudig 'n klein woord lêer wat 'n reeks letters bevat.) Met aanvaarding van ons cookies laat dit jou toe om jou gebruikersvoorkeure van sessie tot sessie te behou. Alhoewel die meeste browsers cookies automaties aanvaar, kan jy jou browser stel om alle cookies te weier, of om jou in te lig wanneer jy 'n cookie ontvang. Sekere YouVersion funksionaliteite mag dalk nie behoorlik werk as jy cookies deaktiveer nie."   
       log title:                                "Aanteken informasie"
-      log text:                                 "As jy LifeChurch.tv dienste gebruik, stoor ons servers automaties  informasie wat jou browser stuur as dit een van ons webtuistes besoek. Hierdie server registers mag informasie bevat soos jou your web versoek, Internet Protokol adres, browser tipe, browser taal, die datum en tyd van jou versoek, en een of meer 'cookies' wat jou browser uniek kan identifiseer."
+      log text:                                 "As jy LifeChurch.tv dienste gebruik, stoor ons servers automaties  informasie wat jou browser stuur as dit een van ons webtuistes besoek. Hierdie server registers mag informasie bevat soos jou  web versoek, Internet Protokol adres, browser tipe, browser taal, die datum en tyd van jou versoek en een of meer 'cookies' wat jou browser uniek kan identifiseer."
       communications title:                     "Gebruikers kommunikasies"
       communications text:                      "Persoonlike inligting of versoeke wat jy indien via %{link} sal aan die groep administrateur gestuur word. Die groep administrateur en/of een van hul lede sal toegang tot die inligting hê. Wanneer jy 'n e-pos of ander kommunikasie aan enigewebtuiste stuur wat besit word deur LifeChurch.tv, mag ons daardie kommunikasies terughou om jou navrae te prosesseer, te reageer op jou versoeke en ons dienste te verbeter."
       third party title:                        "Derde party webtuistes"
@@ -555,9 +555,9 @@ af:
     youversion copy:                            "Sedert sy stigting in 1996, was dit LifeChurch.tv se doel om mense te lei om ten volle gewyde volgelinge van Christus te word. Deur dit te doen, het ons gekyk na nuwe maniere om mense te help die Bybel te verbind aan hul daaglikse lewe. Ons metodes het oor die jare verander soos ons verskillende tegnieke en strategieë ingelyf het. Maar aan die kern, bly ons fokus op die relevansie as ons voortdurend daarna streef om aan te toon en die mense te leer hoe God se Woord toepaslik is vir almal, maak nie saak waar hulle is in die lewe."
     youversion copy 2:                          "YouVersion verteenwoordig 'n nuwe grens in LifeChurch.tv se pogings. Ons bou nie net 'n instrument om 'n impak te maak in die wêreld deur gebruik te maak van innoverende tegnologie, meer belangrik, ons is besig om mense te betrek in 'n verhouding met God as hulle die toepaslikheid van die Bybel het vir hul lewens ontdek."
     partners title:                             "'n Spesiale Woord Van Dank Vir Ons Venote"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
+    partners text:                              "Sonder ons vrygewige Bybel publiseer vennote, sal YouVersion eenvoudig nie in staat wees om ons wêreldwye gemeenskap te verskaf met so baie Bybels nie.  Baie van julle het gevra hoe julle hierdie ondersteuners van die YouVersion missie kan bedank vir hul noodsaaklike ondersteuning. Jy kan meer leer oor hulle, hul bedieninge, en maniere wat julle hulle kan ondersteun deur die skakels hier onder."
     translation title:                          "Ons Vertalings Spanne"
-    learn more:                                 "Learn More"
+    learn more:                                 "Meer Inligting"
   press page:
     title:                                      "Media Area"
     contact header:                             "Media Kontak Inligting"
