--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -569,7 +569,7 @@ ru:
     twitter:                                    "YouVersion в Twitter"
     support:                                    "Нужна помощь по YouVersion?"
     lead copy:                                  "Основанное на онлайн Библии YouVersion.com, Приложение Библия является бесплатной мобильной Библией, которая может быть установлена ​​практически на любой телефон. Приложение Библия позволяет пользователям читать Библию, делиться стихами через социальные сети, добавлять в закладки любимые места и многое другое &mdash; и все это доступно в формате, идущем в ногу с всё более мобильным образом жизни современного человека."
-    resources title:                            "Для для прессы"
+    resources title:                            "Для прессы"
     now title:                                  "Сегодня в сообществе YouVersion"
     resources:
       now:                                      "Текущая активность в реальном времени"
