--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -59,7 +59,7 @@ tr:
   my notifications:                             "Bildirimleri Yönet"
   my connections:                               "Bağlı Hesaplar"
   my devices:                                   "Bağlı Mobil Cihazlar"
-  language name:                                "English"
+  language name:                                "Türkçe"
   sign in:                                      "Sign in"
   sign up:                                      "Kaydol"
   have an account:                              "Hesabınız var mı?"
@@ -116,7 +116,7 @@ tr:
   show all notes:                               "Tüm %{total} notları görüntüle"
   recent bookmarks:                             "En Yeni Yer İmleri"
   percentage display:                           "%{number}%"
-  myself:                                       "Ben"
+  myself:                                       "Benim"
   none found:                                   "Girdiğiniz kriterlere göre hiç birşey bulunamadı.Arama kriterlerinizi genişletmeye deneyiniz"
   paginated items shown:                        "Toplam %{total_available}% öğeden {first_shown}&ndash;%{last_shown}"
   160 character limit:                          "En fazla 160 karekter"
@@ -138,22 +138,22 @@ tr:
     status field:                               "Status:"
     reference field:                            "Ayet(ler):"
     version field:                              "Çeviri:"
-    title field:                                "Başlık"
+    title field:                                "Başlık:"
     content field:                              "İçerik:"
     save:                                       "Kaydet"
     select from list:                           "--Seçiniz--"
     edit note:                                  "Notu Düzenle"
-    all notes:                                  "Tüm Notları"
+    all notes:                                  "Bütün Notlar"
     community notes:                            "Toplumun Notları"
     new note:                                   "Yeni Not"
     status field:                               "Notun Durumu:"
     edit:                                       "Düzenle"
     delete:                                     "Notu Sil"
     confirm delete:                             "Evet, eminim"
-    write new:                                  "Yeni Not Yaz"
-    not found:                                  "YouVersion'ı kullanarak seçtiğiniz Kutsal Kitap ayetlerini video, resim, metin ve İnternet linkleri ile kolayca bağlayabilirsiniz. Böylece YouVersion toplumuna katılıp Kutsal Kitap'tan öğrendiklerinizi ve düşüncelerinizi paylaşabilirsiniz. Hemen şimdi başlayabilirsiniz. Kutsal Kitap Okuyucusundan bir(kaç) ayet seçip not ekleyin. Çok kolay!"
+    write new:                                  "Yeni Bir Not Yaz"
+    not found:                                  "YouVersion'ı kullanarak seçtiğiniz Kutsal Kitap ayetlerini video, resim, metin ve İnternet linklerine kolayca bağlayabilirsiniz. Böylece YouVersion toplumuyla Kutsal Kitap'tan öğrendiklerinizi ve düşüncelerinizi paylaşabilirsiniz. Hemen şimdi başlayabilirsiniz. Kutsal Kitap Okuyucusundan bir(kaç) ayet seçip not ekleyin. Çok kolay!"
     cancel:                                     "İptal"
-    pop out:                                    "Dışarı Çıkar"
+    pop out:                                    "Yeni Pencerede Aç"
     notes i like:                               "Beğendiğim Notlar"
     none found:                                 "Not bulunamadı..."
     see my likes:                               "Beğendiklerimin Hepsini Görüntüle"
@@ -164,11 +164,11 @@ tr:
     choose version:                             "Çeviri Seç"
     choose second version:                      "İkinci Çeviriyi Seç"
     share:                                      "Paylaş"
-    share now:                                  "Paylaş"
+    share now:                                  "Hemen Paylaş"
     selected:                                   "Seçili"
     preferences:                                "Tercihler"
     listen:                                     "Dinle"
-    parallel:                                   "Paralel"
+    parallel:                                   "Karşılaştır"
     full screen:                                "Tam Ekran"
     about the version:                          "%{version} hakkında"
     settings:                                   "Okuyucu Ayarları"
@@ -188,7 +188,7 @@ tr:
     user name:                                  "Kullanıcı Adı"
     agreement:                                  "Youversion %{terms_link}’ını kabul ediyorum."
     terms and conditions:                       "Şartlar ve Koşullar"
-    facebook sign up success:                   "Muhteşem! Facebook hesabınızı onaylanmış bulunuyorsunuz. Devam etmek için YouVersion kullanıcı ismini ve parolasını belirleyin."
+    facebook sign up success:                   "Muhteşem! Facebook hesabınızı onayladınız. Devam etmek için YouVersion kullanıcı ismini ve parolasını belirleyin."
     register:                                   "Kaydol"
     thanks for registering:                     "Kaydolduğunuz için teşekkür ederiz!"
     welcome to youversion:                      "YouVersion toplumuna hoşgeldiniz!"
@@ -208,7 +208,7 @@ tr:
     sign in for settings:                       "Profilinize erişebilmek için lütfen giriş yapınız."
     my profile:                                 "Profilim"
     edit profile:                               "Profili Düzenle"
-    update profile:                             "Profilimi Güncelle"
+    update profile:                             "Profili Güncelle"
     my password:                                "Parolamı Değiştir"
     edit password:                              "Parolayı Değiştir"
     picture:                                    "Resim"
@@ -368,13 +368,13 @@ tr:
       error:                                    "Parolanızı değiştirirken bir hata oluştu. Özür Dileriz."
       old was invalid:                          "Parolanızı değiştirebilmek için eski parolanızı düzgün bir şekilde girmeniz gerekir."
     notifications:
-      badges:                                   "Kazandığım rozetleri bana bildir."
+      badges:                                   "Rozet kazandığımda beni bilgilendir."
       follower:                                 "Birisi beni takip ettiğinde bana bildir."
-      newsletter:                               "YouVersion duyurularını bana bildir."
+      newsletter:                               "YouVersion duyurularını bana gönder."
       note_like:                                "Birisi notlarımı beğenirse beni bilgilendir."
       reading_plans:                            "Kullanmaya başladığım okuma planları hakkında bilgilendir."
       publishing partners:                      "YouVersion'ın içerik sunan ortakları hakkında beni devamlı olarak bilgilendirin."
-      update:                                   "Bilgilendirmeleri Güncelle"
+      update:                                   "Bildirimleri Güncelle"
   bookmarks:
     edit:                                       "Düzenle"
     delete:                                     "Geçerli Yer İmini Sil"
@@ -412,7 +412,7 @@ tr:
     all category plans:                         "%{category} Okuma Planların Tümü"
     my plans:                                   "Okuma Planlarım"
     none found:                                 "Girdiğiniz kriterlere uygun bir Okuma Planını bulamadık. Arama kriterlerinizi genişletmeye deneyin."
-    about publisher:                            "Yayıncı ([Daha fazla bilgi])"
+    about publisher:                            "Yayıncı Hakkında"
     overview:                                   "Okuma Planına Genel Bakış"
     start:                                      "Okuma Planına Başla"
     length field:                               "Okuma Planı Uzunluğu:"
