--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -130,7 +130,7 @@ ko:
     unlike button text:                         "좋아요 취소"
   notes:
     loading community:                          "공동체 노트 로딩중 ..."
-    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
+    no community notes:                         "선택하신 구절에 관한 공동체 노트가 없습니다. 노트 작성을 원하시면 성경 리더에서 원하는 구절을 선택한 후 리더 상단에 있는  '선택' 버튼을 클릭하면 됩니다."
     public:                                     "공개"
     private:                                    "비공개"
     draft:                                      "임시저장"
@@ -556,7 +556,7 @@ ko:
     youversion copy:                            "1996년 LifeChurch.tv 교회 창립 때부터, 본 교회의 목적은 사람들을 전적으로 그리스도를 따르는 헌신된 자들로 인도하는 것이었습니다.   이 목적을 달성하는 과제 중 하나는 성경 말씀을 모든 분들의 일상의 삶속으로 연결하는 것이었습니다.  여러가지의 기술과 전략을 도입해서 시도하는 과정중에서 많은 새로운 시도들이 있었습니다.  하지만 하나님의 말씀이 모든 이의 일상생활에 실체적 연관을 짓게할 수있도록 최선을 다하자하는 그 중심 전략은 바뀌지 않았습니다."
     youversion copy 2:                          "유버전은 LifeChurch.tv의 수고 가운데 보여진 새로운 최전방입니다. 유버전은 단지 혁신기술을 사용하여 세상에 충젹을 주기위한 도구를 만드는 것이 아니라, 그보다 더 중요한 것은, 성경이 가진 우리들의 삶과 관계가 있다는 것을 발견하게 함으로써, 더 많은 사람들이 하나님과 관계를 맺을 수 있도록 하는 것입니다."
     partners title:                             "여러 파트너들께 특별한 감사를 드립니다."
-    partners text:                              "성경 출판 협력체의 도움 없이는 전 세계적으로 이렇게 많은 번역본을 제공할 수가 없습니다.  많은 분들께서 유버전 사역을 적극적으로 후원하는 협력체에 감사를 표시할 방법을 물어오셨습니다.  아래의 링크를 통해서 이들 협력체, 사역및  나아가 동참할 방법들을 더 자세히  알 수있습니다"
+    partners text:                              "성경 출판 협력체의 도움 없었다면, 이렇게 많은 번역본을 전 세계적으로  제공할 수가 없습니다.  많은 분들께서 유버전 사역을 적극적으로 후원하는 협력체에 감사를 표시할 방법을 물어오셨습니다.  아래의 링크를 통해서 이들 협력체, 사역및  나아가 동참할 방법들을 더 자세히  알 수있습니다"
     translation title:                          "유버전 번역팀"
     learn more:                                 "더 알아보기"
   press page:
