--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -130,7 +130,7 @@ pl:
     unlike button text:                         "Cofnij \"lubię\""
   notes:
     loading community:                          "Ładowanie notatek społeczności..."
-    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
+    no community notes:                         "Nie znaleziono notatek odnoszących się do wybranych wersetów. Aby utworzyć notatkę, wybierz werset w czytniku Biblii i kliknij przycisk Wybrane u góry czytnika."
     public:                                     "Publiczne"
     private:                                    "Prywatne"
     draft:                                      "Szkic"
