added arabic and bulgarian

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -356,10 +356,13 @@ de:
       avatar file:                              "Wähle eine Datei für dein Bild aus."
       avatar help:                              "Folgende Bildformate sind möglich: JPG, PNG oder GIF. Dein Bild wird in ein 48x48 Miniaturbild umgewandelt. Die maximale Dateigröße beträgt 1MB."
       picture error:                            "Entschuldigung, es gab einen Fehler, als dein Bild aktualisiert wurde."
+      picture_empty:                            "Bitte wähle ein Bild zum Hochladen."
       picture_too_large:                        "Das Bild muss kleiner als 1 Megabyte sein"
       picture_invalid_type:                     "Das Bild muss JPG, PNG oder GIF Format haben."
+      picture_creation form errors:             "Folgende(r) Fehler haben das Aktualisiseren deines Bildes verhindert:"
       updated picture:                          "Du hast dein Bild erfolgreich aktualisiert."
       updated notifications:                    "Du hast deine Benachrichtigungseinstellungen erfolgreich aktualisiert."
+      notifications token error:                "Ungültige Eingabe; bitte melde dich an, um deine Einstellungen für Benachrichtigungen zu ändern."
       notification errors:                      "Der folgende Fehler hat die Änderung deiner Benachrichtigungen verhindert:"
       edit:                                     "Bearbeiten"
       bio:                                      "Lebenslauf"
