--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -357,10 +357,13 @@ ko:
       avatar file:                              "사진 파일을 골라주세요"
       avatar help:                              "JPG, PNG 혹은 GIF 파일을 사용하실 수 있습니다. 48 x 48 크기로 변환됩니다. 최대 메가 바이트의 파일을 올릴 수 있습니다."
       picture error:                            "죄송합니다.  사진 업데이트중 오류가 발생했습니다."
+      picture_empty:                            "Please select a picture to upload"
       picture_too_large:                        "사진의 크기는 1 메가바이트 미만이여야합니다."
       picture_invalid_type:                     "사진은  JPG, PNG, 혹은 GIF 포맷이라야 합니다."
+      picture_creation form errors:             "The following error(s) prevented updating your picture:"
       updated picture:                          "사진이 변경되었습니다!"
       updated notifications:                    "알림 설정이 변경되었습니다!"
+      notifications token error:                "Invalid token, please sign in to edit your notificaiton settings."
       notification errors:                      "아래 오류로 인해 알림 설정을 변경하지 못했습니다."
       edit:                                     "수정"
       bio:                                      "자기소개"
