--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -356,10 +356,13 @@ nl:
       avatar file:                              "Selecteer een bestand voor je foto"
       avatar help:                              "Foto's kunnen in JPG-, PNG-of GIF-formaat zijn. Je foto wordt omgezet in een 48x48 miniatuur. De maximale bestandsgrootte is 1 MB."
       picture error:                            "Sorry, er is een fout opgetreden bij het uploaden van uw foto."
+      picture_empty:                            "Selecteer alstublieft een afbeelding om te uploaden."
       picture_too_large:                        "Foto zou kleiner moeten zijn dan 1 megabyte"
       picture_invalid_type:                     "Fotot zou JPG, PNG of GIF moeten zijn"
+      picture_creation form errors:             "De volgende fout(en) voorkwamen het bijwerken van uw afbeelding:"
       updated picture:                          "Gelukt! Je hebt je foto bijgewerkt."
       updated notifications:                    "Succes! Je hebt je meldingsinstellingen bijgewerkt."
+      notifications token error:                "Ongeldig teken, log alstublieft in om je meldingen aan te passen."
       notification errors:                      "De volgende fout(en) voorkomen dat je jouw notificaties can updaten:"
       edit:                                     "Bewerk"
       bio:                                      "Biografie"
