--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -356,10 +356,13 @@ pl:
       avatar file:                              "Wybierz plik swojego zdjęcia"
       avatar help:                              "Zdjęcia mogą być w formacie JPG, PNG lub GIF. Twój obrazek zostanie dostosowany do miniatury 48x48 pikseli. Maksymalna wielkość pliku to 1 MB."
       picture error:                            "Wystąpił błąd podczas aktualizacji obrazka."
+      picture_empty:                            "Wybierz obrazek do załadowania"
       picture_too_large:                        "Obrazek powinien zajmować mniej niż 1 megabajt"
       picture_invalid_type:                     "Format obrazka to JPG, PNG lub GIF"
+      picture_creation form errors:             "Poniższy błąd lub błędy nie pozwoliły na aktualizację:"
       updated picture:                          "Sukces! Zaktualizowałeś swój obrazek."
       updated notifications:                    "Zaktualizowałeś swoje ustawienia powiadomień."
+      notifications token error:                "Nieprawidłowy token, zaloguj się, aby zmienić ustawienia powiadomień."
       notification errors:                      "Poniższe błędy uniemożliwiły aktualizację twoich powiadomień:"
       edit:                                     "Edytuj"
       bio:                                      "Biografia"
