--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -356,10 +356,13 @@ ru:
       avatar file:                              "Выберить файл с фотографией"
       avatar help:                              "Фотографии могут быть в формате JPG, PNG или GIF. Ваша фотография будет конвертирована в миниатюру размером 48х48. Максимальный размер файла 1 Мб."
       picture error:                            "Извините, при обновлении фотографии возникла ошибка."
+      picture_empty:                            "Пожалуйста, выберите картинку для загрузки"
       picture_too_large:                        "Размер фотографии должен быть меньше 1 Мб"
       picture_invalid_type:                     "Фотография должна быть в формате JPG, PNG, или GIF "
+      picture_creation form errors:             "Загрузка не удалась по следующим причинам:"
       updated picture:                          "Фотография успешно обновлена."
       updated notifications:                    "Настройки уведомлений успешно обновлены."
+      notifications token error:                "Некорректная ссылка. Пожалуйста, войдите в систему, чтобы изменить настройки уведомлений."
       notification errors:                      "Следующая ошибка помешала обновлению настроек:"
       edit:                                     "Изменить"
       bio:                                      "О себе"
