--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -356,10 +356,13 @@ sk:
       avatar file:                              "Zvoľte súbor s vaším obrázkom"
       avatar help:                              "Obrázky môžu byť vo formáte JPG, PNG, alebo GIF. Váš obrázok bude upravený na rozlíšenie 48x48. Maximálna veľkosť súboru je 1MB."
       picture error:                            "Prepáčte, pri aktualizácii obrázka došlo k chybe."
+      picture_empty:                            "Prosím zvoľte obrázok, ktorý sa nahrá"
       picture_too_large:                        "Obrázok by mal mať menej ako 1 megabyte"
       picture_invalid_type:                     "Obrázok by mal byť vo formáte JPG, PNG alebo GIF"
+      picture_creation form errors:             "Nasledovné chyby zabránili zmene vášho obrázka:"
       updated picture:                          "Hotovo! Váš obrázok bol úspešne aktualizovaný."
       updated notifications:                    "Hotovo! Vaše nastavenia notifikácií boli úspešne aktualizované."
+      notifications token error:                "Neplatný token, prosím prihláste sa a zmeňte vaše nastavenia notifikácií."
       notification errors:                      "Nasledujúce chyby zabránili aktualizácii vašich notifikácií:"
       edit:                                     "Upraviť"
       bio:                                      "Bio"
