--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -130,7 +130,7 @@ zh-TW:
     unlike button text:                         "不喜歡"
   notes:
     loading community:                          "正在加載社群筆記..."
-    no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
+    no community notes:                         "未找到任何有參考經文的社群筆記。要建立筆記，請在聖經閱讀器裡選擇一個經節，然後在頂部點選【選中的】按鈕。"
     public:                                     "公開"
     private:                                    "不公開"
     draft:                                      "草稿"
@@ -356,10 +356,13 @@ zh-TW:
       avatar file:                              "選擇一個檔案照片作為您的圖片"
       avatar help:                              "圖片可以是JPG，PNG，或GIF格式。您的圖片會轉換成48x48的縮圖。圖片的檔案大小最多1MB。"
       picture error:                            "抱歉， 更新您的圖片時出錯。"
+      picture_empty:                            "請選擇一張照片來上傳"
       picture_too_large:                        "圖片應小於1MB"
       picture_invalid_type:                     "圖片格式應為 JPG、PNG 或 GIF"
+      picture_creation form errors:             "以下的錯誤妨礙了您照片的更新:"
       updated picture:                          "成功了！您已經更新了您的圖片。"
       updated notifications:                    "成功了！您已經更新了您的通知設定。"
+      notifications token error:                "無效的 token ，請登入以編輯您的通知設定。"
       notification errors:                      "以下的錯誤使您無法更新通知："
       edit:                                     "編輯"
       bio:                                      "個人簡介"
@@ -555,7 +558,7 @@ zh-TW:
     youversion copy:                            "自 1996年 創立以來，LifeChurch.tv 的使命就是帶領人們成為基督的虔誠跟隨者。在這過程中，我們已經尋求新的方法來幫助人們把聖經連接到他們的日常生活裡。多年來我們的方法也因為納入多種不同的技術和策略而有所改變。但在事工的核心，我們的重點仍然是持續努力地展示和教導人們上帝的話語如何與每個人有關，不管他們處於生命的任何一個階段。"
     youversion copy 2:                          "YouVersion 在 LifeChurch.tv 的事工裡代表着一個新的領域。我們不只是利用創新的技術建立一個工具來影響世界，更重要的是，當人們發現聖經在他們生命裡的重要性時，我們也幫助人們進入與上帝的關係。"
     partners title:                             "特別感謝我們的合作夥伴"
-    partners text:                              "如果沒有我們慷慨的聖經出版社夥伴， YouVersion根本沒有能力給全世界的社群提供這麼多的聖經版本。許多用戶曾問過該如何感謝這些YouVersion使命的重要支持者。您可以透過以下的鏈結來暸解他們與他們的事工、以及您可以幫助他們的方法。"
+    partners text:                              "如果沒有我們慷慨的聖經出版社夥伴， YouVersion 根本沒有能力給全世界的社群提供這麼多的聖經版本。許多用戶曾問過該如何感謝這些重要的 YouVersion 使命支持者。您可以透過以下的鏈結來暸解他們與他們的事工，還有您可以幫助他們的方法。"
     translation title:                          "我們的翻譯團隊"
     learn more:                                 "暸解更多"
   press page:
