pulled new i18n strings from TX

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -59,7 +59,7 @@ bg:
   my notifications:                             "Съобщения"
   my connections:                               "Свързани профили"
   my devices:                                   "Свързани устройства"
-  language name:                                "Английски"
+  language name:                                "Български"
   sign in:                                      "Sign in"
   sign up:                                      "Регистрация"
   have an account:                              "Регистриран?"
